# git-deployer

./: .gitignore  Makefile  README.md  config.example.json  pyproject.toml  run_watcher.py  start.sh
git_deploy_watcher/: __init__.py  __main__.py  admin_cli.py  config.py  config_migrate.py  config_store.py  deploy.py  deploy_trigger.py  git_ops.py  main.py  notify.py  state.py
git_deploy_watcher/admin/: server.py
git_deploy_watcher/admin/static/: app.js  index.html  style.css
polkit/: 99-git-deploy-manage-units.rules.example
systemd/: git-deploy-watcher.service
tests/: test_admin_api.py  test_config.py  test_config_reload.py  test_config_store.py  test_deploy_backoff.py  test_deploy_trigger.py  test_notify.py
